k8s/app-infrastructure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-demo-deployment
  labels:
    app: gateway-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-demo
  template:
    metadata:
      labels:
        app: gateway-demo
    spec:
      containers:
      - name: gateway-demo
        image: k8s-gateway-api:1.0.0
        imagePullPolicy: Never
        ports:
        - containerPort: 8086 # 1. கன்டெய்னர் 8086ல் இயங்குகிறது (சரி)
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-demo-service
spec:
  selector:
    app: gateway-demo
  ports:
  - protocol: TCP
    port: 8086       # 2. சர்வீஸ் வெளியில் காட்டும் போர்ட் (சரி)
    targetPort: 8086 # 3. பாட்-க்குள் இருக்கும் கன்டெய்னர் போர்ட் (சரி)
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    protocol: HTTP
    port: 80 # வெளியில் இருந்து லோடு பேலன்சர் மூலம் போர்ட் 80ல் டிராஃபிக் வரும்
    allowedRoutes:
      namespaces:
        from: Same
